make dataset on the way

--- a/nagasawa/one_sentence_split.ipynb
+++ b/nagasawa/one_sentence_split.ipynb
@@ -354,26 +354,26 @@
    ],
    "source": [
     "#ファイル行数カウント\n",
-    "with open('wiki_40b_test_one_stc.txt', 'r') as f:\n",
-    "    test_line_num = 0\n",
-    "    for line in f:\n",
-    "        test_line_num = test_line_num + 1\n",
-    "    print(\"test_line_num:\", test_line_num)\n",
-    "f.close()\n",
+    "# with open('wiki_40b_test_one_stc.txt', 'r') as f:\n",
+    "#     test_line_num = 0\n",
+    "#     for line in f:\n",
+    "#         test_line_num = test_line_num + 1\n",
+    "#     print(\"test_line_num:\", test_line_num)\n",
+    "# f.close()\n",
     "\n",
-    "with open('wiki_40b_val_one_stc.txt', 'r') as f:\n",
-    "    val_line_num = 0\n",
-    "    for line in f:\n",
-    "        val_line_num = val_line_num + 1\n",
-    "    print(\"val_line_num:\", val_line_num)\n",
-    "f.close()\n",
+    "# with open('wiki_40b_val_one_stc.txt', 'r') as f:\n",
+    "#     val_line_num = 0\n",
+    "#     for line in f:\n",
+    "#         val_line_num = val_line_num + 1\n",
+    "#     print(\"val_line_num:\", val_line_num)\n",
+    "# f.close()\n",
     "\n",
-    "with open('wiki_40b_train_one_stc.txt', 'r') as f:\n",
-    "    train_line_num = 0\n",
-    "    for line in f:\n",
-    "        train_line_num = train_line_num + 1\n",
-    "    print(\"train_line_num:\", train_line_num)\n",
-    "f.close()"
+    "# with open('wiki_40b_train_one_stc.txt', 'r') as f:\n",
+    "#     train_line_num = 0\n",
+    "#     for line in f:\n",
+    "#         train_line_num = train_line_num + 1\n",
+    "#     print(\"train_line_num:\", train_line_num)\n",
+    "# f.close()"
    ]
   },
   {
