--- a/nagasawa/learning.ipynb
+++ b/nagasawa/learning.ipynb
@@ -2,23 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.7/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch.nn.functional as F\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from torch.utils.data import DataLoader\n",
+    "from my_module.tools import BertToEmoFileDataset, calc_loss, EarlyStopping\n",
+    "from tqdm import tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pytorch_lightning as pl\n",
-    "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
-    "import torch\n",
-    "from pytorch_lightning import Trainer\n",
-    "import tensorboard"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## ネットワーク定義"
+    "# ハイパーパラメータ\n",
+    "batch_size = 512\n",
+    "max_epoch = 10000\n",
+    "\n",
+    "# 設定\n",
+    "num_workers = 12"
    ]
   },
   {
@@ -27,38 +43,186 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Net(pl.LightningModule):\n",
+    "class Net(nn.Module):\n",
     "\n",
     "    def __init__(self):\n",
-    "        super().__init__()\n",
+    "        super(Net, self).__init__()\n",
     "\n",
     "        self.bn = nn.BatchNorm1d(768)\n",
     "        self.fc1 = nn.Linear(768, 400)\n",
     "        self.fc2 = nn.Linear(400, 10)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        h = self.bn(x)\n",
-    "        h = self.fc1(h)\n",
-    "        h = F.relu(h)\n",
-    "        h = self.fc2(h)\n",
-    "        return h\n",
-    "\n",
-    "    def training_step(self, batch, batch_idx):\n",
-    "        x, t = batch\n",
-    "        y = self(x)\n",
-    "        loss = F.cross_entropy(y, t)\n",
-    "        return loss\n",
-    "\n",
-    "    def configure_optimizers(self):\n",
-    "        optimizer = torch.optim.SGD(self.parameters(), lr=0.01)\n",
-    "        return optimizer"
+    "        x = self.bn(x)\n",
+    "        x = self.fc1(x)\n",
+    "        x = F.relu(x)\n",
+    "        x = self.fc2(x)\n",
+    "        return x\n"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "device: cuda:0\n"
+     ]
+    }
+   ],
    "source": [
-    "## データセット読み込み"
+    "# GPUの設定状況に基づいたデバイスの選択\n",
+    "device = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')\n",
+    "print(\"device:\", device)\n",
+    "\n",
+    "# 乱数シードを固定して再現性を確保\n",
+    "torch.manual_seed(0)\n",
+    "\n",
+    "# インスタンス化・デバイスへの転送\n",
+    "net = Net().to(device)\n",
+    "\n",
+    "# 損失関数の選択\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "\n",
+    "# 最適化手法の選択\n",
+    "optimizer = torch.optim.SGD(net.parameters(), lr=0.001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Trainデータセットの準備\n",
+    "# データセットが存在するディレクトリを指定\n",
+    "dataset_root_dir = \"/workspace/dataset/data_src/BERT_to_emotion/only_emotion/train/split/\"\n",
+    "train_dataset = BertToEmoFileDataset(dataset_root_dir)\n",
+    "\n",
+    "# FileDataloader\n",
+    "train_dataloader = DataLoader(train_dataset, batch_size = batch_size, shuffle=True, num_workers=num_workers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# valデータセットの準備\n",
+    "dataset_root_dir = \"/workspace/dataset/data_src/BERT_to_emotion/only_emotion/val/split/\"\n",
+    "val_dataset = BertToEmoFileDataset(dataset_root_dir)\n",
+    "\n",
+    "val_dataloader = DataLoader(val_dataset, batch_size = batch_size, num_workers=num_workers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# testデータセットの準備\n",
+    "dataset_root_dir = \"/workspace/dataset/data_src/BERT_to_emotion/only_emotion/test/split/\"\n",
+    "test_dataset = BertToEmoFileDataset(dataset_root_dir)\n",
+    "\n",
+    "test_dataloader = DataLoader(test_dataset, batch_size = batch_size, num_workers=num_workers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# early stopping\n",
+    "earlystopping  = EarlyStopping(patience=5, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch: 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 7552/7552 [02:15<00:00, 55.60it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "val_loss calc...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 413/413 [00:08<00:00, 48.68it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train_loss: 2.252992630004883, val_loss: 1.7904572486877441\n",
+      "Validation loss decreased (inf --> 1.790457).  Saving model ...\n",
+      "epoch: 1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/7552 [00:00<?, ?it/s]"
+     ]
+    }
+   ],
+   "source": [
+    "# ネットワークの学習\n",
+    "for epoch in range(max_epoch):\n",
+    "\tprint(\"epoch:\", epoch)\n",
+    "\tloss_list = []\n",
+    "\tfor batch in tqdm(train_dataloader):\n",
+    "\t\tx, t = batch\n",
+    "\n",
+    "\t\tx = x.to(device)\n",
+    "\t\tt = t.to(device)\n",
+    "\n",
+    "\t\toptimizer.zero_grad()\n",
+    "\n",
+    "\t\ty = net(x)\n",
+    "\n",
+    "\t\tloss = criterion(y, t)\n",
+    "\n",
+    "\t\tloss.backward()\n",
+    "\n",
+    "\t\tloss_list.append(loss)\n",
+    "\n",
+    "\t\toptimizer.step()\n",
+    "\t\t\n",
+    "\ttrain_loss_avg = torch.tensor(loss_list).mean()\n",
+    "\tprint(\"val_loss calc...\")\n",
+    "\tval_loss_avg = calc_loss(net, val_dataloader, criterion, device)\n",
+    "\tprint(\"train_loss: {}, val_loss: {}\".format(train_loss_avg, val_loss_avg))\n",
+    "\tearlystopping(val_loss_avg, net) #callメソッド呼び出し\n",
+    "\tif earlystopping.early_stop: #ストップフラグがTrueの場合、breakでforループを抜ける\n",
+    "\t\tprint(\"Early Stopping!\")\n",
+    "\t\tbreak"
    ]
   },
   {
@@ -67,35 +231,11 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## ネットワークの学習"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# GPUを含めた乱数シード固定\n",
-    "pl.seed_everything(0)\n",
-    "net = Net()\n",
-    "\n",
-    "# 学習を行う Trainer\n",
-    "trainer = Trainer(max_epochs=10)\n",
-    "\n",
-    "# 学習の実行\n",
-    "trainer.fit(net, train_loader, val_loader)"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.13 ('base')",
+   "display_name": "Python 3.9.13 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -109,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.7.13"
   },
   "orig_nbformat": 4,
   "vscode": {
