optimization method change: SGD->Adam

--- a/nagasawa/learning.ipynb
+++ b/nagasawa/learning.ipynb
@@ -30,11 +30,11 @@
    "outputs": [],
    "source": [
     "# ハイパーパラメータ\n",
-    "batch_size = 512\n",
+    "batch_size = 128\n",
     "max_epoch = 10000\n",
     "\n",
     "# 設定\n",
-    "num_workers = 12"
+    "num_workers = 20"
    ]
   },
   {
@@ -50,13 +50,16 @@
     "\n",
     "        self.bn = nn.BatchNorm1d(768)\n",
     "        self.fc1 = nn.Linear(768, 400)\n",
-    "        self.fc2 = nn.Linear(400, 10)\n",
+    "        self.fc2 = nn.Linear(400, 100)\n",
+    "        self.fc3 = nn.Linear(100, 10)\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = self.bn(x)\n",
     "        x = self.fc1(x)\n",
     "        x = F.relu(x)\n",
     "        x = self.fc2(x)\n",
+    "        x = F.relu(x)\n",
+    "        x = self.fc3(x)\n",
     "        return x\n"
    ]
   },
@@ -88,7 +91,7 @@
     "criterion = nn.CrossEntropyLoss()\n",
     "\n",
     "# 最適化手法の選択\n",
-    "optimizer = torch.optim.SGD(net.parameters(), lr=0.001)"
+    "optimizer = torch.optim.Adam(net.parameters())"
    ]
   },
   {
@@ -158,37 +161,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7552/7552 [02:15<00:00, 55.60it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "val_loss calc...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 413/413 [00:08<00:00, 48.68it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "train_loss: 2.252992630004883, val_loss: 1.7904572486877441\n",
-      "Validation loss decreased (inf --> 1.790457).  Saving model ...\n",
-      "epoch: 1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/7552 [00:00<?, ?it/s]"
+      "  0%|          | 0/30207 [00:00<?, ?it/s]"
      ]
     }
    ],
@@ -223,6 +196,40 @@
     "\tif earlystopping.early_stop: #ストップフラグがTrueの場合、breakでforループを抜ける\n",
     "\t\tprint(\"Early Stopping!\")\n",
     "\t\tbreak"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 413/413 [00:08<00:00, 46.37it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test_loss: 1.1091647148132324\n",
+      "done!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_loss_avg = calc_loss(net, val_dataloader, criterion, device)\n",
+    "print(\"test_loss: {}\".format(test_loss_avg))\n",
+    "print(\"done!\")"
    ]
   },
   {
