pickle dataset ok

--- a/nagasawa/learning.ipynb
+++ b/nagasawa/learning.ipynb
@@ -2,25 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.7/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch.nn.functional as F\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "from torch.utils.data import DataLoader\n",
     "from my_module.tools import BertToEmoFileDataset, BertToEmoDirectDataset, calc_loss, EarlyStopping\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "import pickle"
    ]
   },
   {
@@ -37,8 +29,8 @@
     "# train_dataset = BertToEmoFileDataset(dataset_root_dir)\n",
     "\n",
     "#一気に読み込みバージョン(TESLA用)\n",
-    "dataset_dir = \"/workspace/dataset/data_src/BERT_to_emotion/only_emotion/train/BERT_to_emo_train.txt\"\n",
-    "train_dataset = BertToEmoDirectDataset(dataset_dir)\n",
+    "# dataset_dir = \"/workspace/dataset/data_src/BERT_to_emotion/only_emotion/train/BERT_to_emo_train.txt\"\n",
+    "# train_dataset = BertToEmoDirectDataset(dataset_dir)\n",
     "\n",
     "# valデータセットの準備\n",
     "\n",
@@ -47,8 +39,8 @@
     "# val_dataset = BertToEmoFileDataset(dataset_root_dir)\n",
     "\n",
     "# 一気に読み込みバージョン\n",
-    "dataset_dir = \"/workspace/dataset/data_src/BERT_to_emotion/only_emotion/val/BERT_to_emo_val.txt\"\n",
-    "val_dataset = BertToEmoDirectDataset(dataset_dir)\n",
+    "# dataset_dir = \"/workspace/dataset/data_src/BERT_to_emotion/only_emotion/val/BERT_to_emo_val.txt\"\n",
+    "# val_dataset = BertToEmoDirectDataset(dataset_dir)\n",
     "\n",
     "# testデータセットの準備\n",
     "\n",
@@ -57,8 +49,34 @@
     "# test_dataset = BertToEmoFileDataset(dataset_root_dir)\n",
     "\n",
     "# 一気に読み込みバージョン\n",
-    "dataset_dir = \"/workspace/dataset/data_src/BERT_to_emotion/only_emotion/test/BERT_to_emo_test.txt\"\n",
-    "test_dataset = BertToEmoDirectDataset(dataset_dir)"
+    "# dataset_dir = \"/workspace/dataset/data_src/BERT_to_emotion/only_emotion/test/BERT_to_emo_test.txt\"\n",
+    "# test_dataset = BertToEmoDirectDataset(dataset_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Datasetを外部に保存\n",
+    "# dataset_list = [train_dataset, val_dataset, test_dataset]\n",
+    "# with open('dataset_list_window0.bin', 'wb') as f:\n",
+    "# \tpickle.dump(dataset_list, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Pickle化したデータセットを読み込み\n",
+    "with open(\"/workspace/dataset/data_src/BERT_to_emotion/only_emotion/dataset_list_window0.bin\", 'rb') as p:\n",
+    "\tdataset_list = pickle.load(p)\n",
+    "train_dataset = dataset_list[0]\n",
+    "val_dataset = dataset_list[1]\n",
+    "test_dataset = dataset_list[2]"
    ]
   },
   {
